--- a/src/app.css
+++ b/src/app.css
@@ -32,3 +32,31 @@
   text-decoration: none;
   display: inline-block;
 }
+
+.centerTela {
+  display: flex;
+  justify-content: center;
+}
+
+.albunDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.albuns {
+  box-shadow: 2px 2px 4px black;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 280px;
+}
+
+.albunBox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
