--- a/src/app.css
+++ b/src/app.css
@@ -3,10 +3,10 @@
 }
 
 .reader {
-  display: flex;
-  justify-content: space-between;
   background-color: #fe9600;
+  display: flex;
   height: 45px;
+  justify-content: space-between;
 }
 
 .navBar {
@@ -16,21 +16,20 @@
 }
 
 .linksNavBar {
-  /* background-color: #f44336; */
   color: black;
+  display: inline-block;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
 }
 
 .linksNavBarHover {
   background-color: #fe9600;
   color: black;
+  display: inline-block;
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
 }
 
 .centerTela {
@@ -39,9 +38,9 @@
 }
 
 .albunDetails {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .albuns {
@@ -76,4 +75,18 @@
   justify-content: space-between;
   margin: 5px;
   width: 690px;
+}
+
+.profileContainer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.edit {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 10px;
 }
